# django-captcha

./: .gitignore  MANIFEST.in  MECHANICS.md  README.md  README.rst  pyproject.toml  setup.py
.github/workflows/: act.sh  deploy.yml  publish.yml  test.yml.1
captcha/: fields.py  helpers.py  models.py  storage.py  views.py
captcha/locale/bg/LC_MESSAGES/: django.mo  django.po
captcha/locale/cs/LC_MESSAGES/: django.po
captcha/locale/de/LC_MESSAGES/: django.mo  django.po
captcha/locale/en/LC_MESSAGES/: django.mo  django.po
captcha/locale/es/LC_MESSAGES/: django.mo  django.po
captcha/locale/fa/LC_MESSAGES/: django.mo  django.po
captcha/locale/fr/LC_MESSAGES/: django.mo  django.po
captcha/locale/it/LC_MESSAGES/: django.mo  django.po
captcha/locale/ja/LC_MESSAGES/: django.mo  django.po
captcha/locale/nl/LC_MESSAGES/: django.mo  django.po
captcha/locale/pl/LC_MESSAGES/: django.mo  django.po
captcha/locale/pt_BR/LC_MESSAGES/: django.mo  django.po
captcha/locale/ru/LC_MESSAGES/: django.mo  django.po
captcha/locale/sk/LC_MESSAGES/: django.mo  django.po
captcha/locale/sv/LC_MESSAGES/: django.mo  django.po
captcha/locale/tr/LC_MESSAGES/: django.mo  django.po
captcha/locale/uk/LC_MESSAGES/: django.mo  django.po
captcha/locale/zh_CN/LC_MESSAGES/: django.mo  django.po
docs/: advanced.rst  index.rst  usage.rst
testproject/: settings.py
