[build-system]
requires = ["pillow","hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-file-captcha"
version = "0.1.6"
authors = [
  { name="Myridia", email="info@myridia.com" },
]
description = "A Django CAPTCHA application with a file-based storage backend support"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django>=5.0",
    "pillow>=11.0",
    "django-ranged-response>=0.2.0",
]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/myridia/django-file-captcha"
Issues = "https://github.com/myridia/django-file-captcha/issues"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.poetry.dependencies]
python = ">=3.10"
django = "^5.0"
pillow = "^11.0"
django-ranged-response = "^0.2.0"

[tool.poetry.group.dev.dependencies]
setuptools = "*"
wheel = "*"
twine = "*"
build = "*"


